[project]
name = "topical-map-mcp"
version = "1.0.0"
description = "Holistic pSEO 2026 (Koray Tugberk GUBUR) - Complete MCP server for topical maps, content briefs, scoring, schema markup, quality gate, and competitor gap analysis."
authors = [{ name = "Built for Axis Consulting" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fastembed>=0.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
